# SnS

./: LICENSE  README.md  pyproject.toml
demo/: SnS_experiment.ipynb  distance_params.json  means_by_group.csv  multinet_params.json  paper_analysis.ipynb  paper_analysis_utils.py  quickstart.ipynb
src/experiments/: local_settings.json
src/experiments/AdversarialAttack_BMM/: args.py  plots.py
src/experiments/AdversarialAttack_BMM/run/: multirun_arguments.py  run_multi.py  run_multi_rand_init.py  run_single.py  run_single_ri.py
src/experiments/MaximizeActivity/: args.py  plot.py
src/experiments/MaximizeActivity/run/: multirun_arguments.py  run_multiple_generator_variants.py  run_multiple_maximize_samples.py  run_multiple_neuronal_scaling.py  run_multiple_optParams_variants.py  run_multiple_references.py  run_single.py  unify_references.ipynb
src/experiments/NeuralRecording/: args.py  nat_stats_dict.ipynb  nat_stats_fp.json
src/experiments/NeuralRecording/run/: run_single.py
src/experiments/SnS_gradient_based/: args.py
src/experiments/SnS_gradient_based/run/: multirun_arguments.py  run_multi.py  (+1 more)
src/experiments/Stretch_and_Squeeze/: args.py  plots.py
src/snslib/core/: experiment.py  generator.py  optimizer.py  scorer.py  subject.py
src/snslib/experiment/: SnS_gradient_based.py  adversarial_attack_max.py  local_settings.json  maximize_activity.py  neural_recording.py  stretch_and_squeeze.py
src/snslib/metaexperiment/: SnS_multiexp_dirs.json  canonical.py  distance_analysis.py  hyperparams_meta_an.json  metaexp.py  metaexp_functs.py  plots.py
(+16 files in other folders)
